Add Bangasser talk.

--- a/talks.Rmd
+++ b/talks.Rmd
@@ -36,6 +36,10 @@ Neuroscience is a rapidly developing field. I will post neuroscience-related new
 
 This is a list of talks that students may wish to attend. *Attendance is not required, however*. Reports on the talks could serve as the basis of one or more blog posts or a paper.
 
+#### [Debra Bangasser], Monday, August 21, 2017 - 3:30 pm - 4:30 pm, Ruth Pike Auditorium (022 BBH Building)
+
+"Sex Differences in Stress Regulation of Arousal and Cognition"
+
 #### [Staci Bilbo](https://www.huck.psu.edu/content/events/2017-08-30-200000staci-bilbobrain-immune-interactions-neurodevelopment-implications), Wednesday, August 30, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
 
 "Brain-immune Interactions in Neurodevelopment: Implications for Autism Spectrum Disorder"
