Change Spring to Fall.

--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ title: "PSYCH 260.002 Fall 2017"
 
 <img src ="http://www.wayofcats.com/blog/wp-content/uploads/2010/08/catbrainmap.gif" height=200px>
 
-Welcome to the PSYCH 260.002 Spring 2017 website.
+Welcome to the PSYCH 260.002 Fall 2017 website.
 
 ## Instructor
 
