Add Jason; fix meeting room.

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,12 +17,13 @@ rogilmore AT-SIGN psu PERIOD edu</br>
 
 ## Teaching Assistant
 
-TBN
+Jason Feldman</br>
+jpf5339 AT-SIGN psu PERIOD edu
 
 ## Meeting time and location
 
 MWF 9:05AM - 9:55AM</br>
-267 [Forest Resources Building](http://www.psumap.com/#Forest%20Resources%20Building)
+106 [Forest Resources Building](http://www.psumap.com/#Forest%20Resources%20Building)
 
 ## About this course
 
