--- a/talks.Rmd
+++ b/talks.Rmd
@@ -2,7 +2,7 @@
 title: "News & Talks"
 ---
 
-### News
+## News
 
 Neuroscience is a rapidly developing field. I will post neuroscience-related news items here from time to time.
 
@@ -32,53 +32,53 @@ Neuroscience is a rapidly developing field. I will post neuroscience-related new
 <!-- - Meyniel, F., Goodwin, G. M., Deakin, J. W., Klinge, C., MacFadyen, C., Milligan, H., … Gaillard, R. (2016). A specific role for serotonin in overcoming effort cost. eLife, 5, e17282. <https://doi.org/10.7554/eLife.17282>. #reward -->
 <!-- - Seelye, K. Q. (2016, December 31). Kitty Dukakis, a Beneficiary of Electroshock Therapy, Emerges as Its Evangelist. The New York Times. Retrieved from <http://www.nytimes.com/2016/12/31/us/kitty-dukakis-electroshock-therapy-evangelist.html>. #depression #ect -->
 
-### Talks
+## Talks
 
 This is a list of talks that students may wish to attend. *Attendance is not required, however*. Reports on the talks could serve as the basis of one or more blog posts or a paper.
 
-#### [Debra Bangasser], Monday, August 21, 2017 - 3:30 pm - 4:30 pm, Ruth Pike Auditorium (022 BBH Building)
+### Debra Bangasser, Monday, August 21, 2017 - 3:30 pm - 4:30 pm, Ruth Pike Auditorium (022 BBH Building)
 
 "Sex Differences in Stress Regulation of Arousal and Cognition"
 
-#### [Staci Bilbo](https://www.huck.psu.edu/content/events/2017-08-30-200000staci-bilbobrain-immune-interactions-neurodevelopment-implications), Wednesday, August 30, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
+### [Staci Bilbo](https://www.huck.psu.edu/content/events/2017-08-30-200000staci-bilbobrain-immune-interactions-neurodevelopment-implications), Wednesday, August 30, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
 
 "Brain-immune Interactions in Neurodevelopment: Implications for Autism Spectrum Disorder"
 
-#### Tatiana Engel, Tuesday, August 22, 2017, 1:30 pm, 112 Osmond Lab
+### Tatiana Engel, Tuesday, August 22, 2017, 1:30 pm, 112 Osmond Lab
 
 "Discovering dynamic computations in the brain from large-scale neural recordings"
 
 Neural responses and behavior are influenced by internal brain states, such as arousal, vigilance, or task context. Ongoing variations of these internal states affect global patterns of neural activity, giving rise to apparent variability of neural responses to sensory stimuli, from trial-to-trial and across time within single trials. Demultiplexing these endogenously generated and externally driven signals proved difficult with traditional techniques based on trial-averaged responses of single neurons, which dismiss neural variability as noise. In this talk, I will describe my recent work leveraging multi-electrode neural activity recordings and computational models to uncover how internal brain states interact with perception and goal-directed behavior. I will show that ensemble neural activity within single columns of the primate visual cortex spontaneously fluctuates between phases of vigorous (On) and faint (Off) spiking. These endogenous On-Off dynamics, which reflect global changes in arousal, are also modulated at a local scale during spatial attention and predict behavioral performance. I will also demonstrate that these On-Off dynamics provide a single unifying mechanism that explains general features of correlated variability classically observed in cortical responses (e.g., changes in neural correlations during attention). I will conclude by sketching out a roadmap for developing a general theory that will allow us to discover dynamic computations from large-scale neural recordings and to link these computations to behavior.
 
-#### [Attila Losonczy](https://www.huck.psu.edu/content/events/2017-09-06-200000attila-losonczydissecting-hippocampal-circuits-navigation-and-memory), Wednesday, September 6, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
+### [Attila Losonczy](https://www.huck.psu.edu/content/events/2017-09-06-200000attila-losonczydissecting-hippocampal-circuits-navigation-and-memory), Wednesday, September 6, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
 
 "Dissecting Hippocampal Circuits for Navigation and Memory"
 
-#### [Daniel Colon-Ramos](https://www.huck.psu.edu/content/events/2017-09-13-200000daniel-colon-ramoscell-biological-mechanisms-synaptic-assembly), Wednesday, September 13, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
+### [Daniel Colon-Ramos](https://www.huck.psu.edu/content/events/2017-09-13-200000daniel-colon-ramoscell-biological-mechanisms-synaptic-assembly), Wednesday, September 13, 2017 - 4:00pm - 5:00 pm, 108 Wartik Lab
 
 "Cell Biological Mechanisms of Synaptic Assembly, Plasticity and Function: Lessons from C. Elegans"
 
-#### [Jim Trimmer](https://www.huck.psu.edu/content/events/2017-10-11-200000jim-trimmertba), Wednesday, October 11, 2017 - 4:00pm - 5:00 pm
+### [Jim Trimmer](https://www.huck.psu.edu/content/events/2017-10-11-200000jim-trimmertba), Wednesday, October 11, 2017 - 4:00pm - 5:00 pm
 
 TBA
 
-#### [Jesse Goldberg](https://www.huck.psu.edu/content/events/2017-10-18-200000jesse-goldbergdopaminergic-error-signals-birdsong-suggest-general), Wednesday, October 18, 2017 - 4:00pm - 5:00 pm, 108 Wartik
+### [Jesse Goldberg](https://www.huck.psu.edu/content/events/2017-10-18-200000jesse-goldbergdopaminergic-error-signals-birdsong-suggest-general), Wednesday, October 18, 2017 - 4:00pm - 5:00 pm, 108 Wartik
 
 "Dopaminergic Error Signals in Birdsong Suggest a General Model of Basal Ganglia Dependent Learning"
 
-#### [Yi Eve Sun (UCLA)](https://www.huck.psu.edu/content/events/2017-10-25-200000yi-eve-suntba), Wednesday, October 25, 2017 - 4:00pm - 5:00 pm, 108 Wartik
+### [Yi Eve Sun (UCLA)](https://www.huck.psu.edu/content/events/2017-10-25-200000yi-eve-suntba), Wednesday, October 25, 2017 - 4:00pm - 5:00 pm, 108 Wartik
 
 TBA
 
-#### [Avital Rodal (Brandeis University)](https://www.huck.psu.edu/content/events/2017-11-01-200000avital-rodaltba), Wednesday, November 1, 2017 - 4:00pm - 5:00 pm, 108 Wartik
+### [Avital Rodal (Brandeis University)](https://www.huck.psu.edu/content/events/2017-11-01-200000avital-rodaltba), Wednesday, November 1, 2017 - 4:00pm - 5:00 pm, 108 Wartik
 
 TBA
 
-#### [Wen-Cheng Xiong (Augusta University)](https://www.huck.psu.edu/content/events/2017-11-29-210000wen-cheng-xiongretromer-and-neurodegenerative-disorders), Wednesday, November 29, 2017 - 4:00pm - 5:00 pm, 108 Wartik
+### [Wen-Cheng Xiong (Augusta University)](https://www.huck.psu.edu/content/events/2017-11-29-210000wen-cheng-xiongretromer-and-neurodegenerative-disorders), Wednesday, November 29, 2017 - 4:00pm - 5:00 pm, 108 Wartik
 
 "Retromer and Neurodegenerative Disorders"
 
-#### [Robert Stern (Boston University School of Medicine)](https://www.huck.psu.edu/content/events/2017-12-06-210000robert-sternchronic-traumatic-encephalopathy-what-we-think-we-know), Wednesday, December 6, 2017 - 4:00pm - 5:00 pm, 108 Wartik
+### [Robert Stern (Boston University School of Medicine)](https://www.huck.psu.edu/content/events/2017-12-06-210000robert-sternchronic-traumatic-encephalopathy-what-we-think-we-know), Wednesday, December 6, 2017 - 4:00pm - 5:00 pm, 108 Wartik
 
 "Chronic Traumatic Encephalopathy: What We Think We Know Now and What We Need to Know Next"
 
