Fix weird problem with link to systems

--- a/docs/lectures/260-2017-08-23-systems-history.Rmd
+++ b/docs/lectures/260-2017-08-23-systems-history.Rmd
@@ -16,7 +16,7 @@ output:
 
 ## Today's topics
 
-- Wrap-up on [systems](https://psu-psychology.github.io/psych-260-2017-fall/lecture-notes/260-2017-08-21.html#29)
+- Wrap-up on [systems](https://psu-psychology.github.io/psych-260-2017-fall/lectures/260-2017-08-21.html#29)
 - History of neuroscience
 
 ## History of neuroscience
@@ -228,6 +228,8 @@ output:
     - Localist/holist debate
     - Nature of neural communication
 - Forms at multiple levels of analysis contribute to function
+
+## Does it matter who did what in science?
 
 ## Next time...
 
