--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ Office hours: Monday, 10:15 - 11:15 am.
 
 Jason Feldman</br>
 jpf5339 AT-SIGN psu PERIOD edu
-Office hour: Fridays 12:30 - 1:30
+Office hour: Tuesdays 1 - 2:00 pm
 Moore 260 
 
 ## Meeting time and location
