--- a/lectures/260-2017-08-25-levels-methods.Rmd
+++ b/lectures/260-2017-08-25-levels-methods.Rmd
@@ -58,6 +58,12 @@ Classic "Powers of Ten" movie by Charles and Ray Eames (10 min).
 
 - A. They employed a word meaning "brain".
 - B. They removed the brain in the process of mummification.
+- C. They created detailed drawings of human brain anatomy.
+
+## Which of the following statements about the Egyptians is false?
+
+- A. They employed a word meaning "brain".
+- B. They removed the brain in the process of mummification.
 - **C. They created detailed drawings of human brain anatomy.**
 
 # Levels of analysis
