--- a/lectures/260-2017-08-28-functional-methods.Rmd
+++ b/lectures/260-2017-08-28-functional-methods.Rmd
@@ -158,6 +158,26 @@ Story about child who underwent ECoG surgery.
 - Experimental condition - control
 - Average across individuals
 
+---
+
+<div class="centered">
+<img src="http://www.d.umn.edu/~jfitzake/Lectures/DMED/SpeechLanguage/CorticalS_LAreas/PosnerRaichlePETLanguageAreas.jpg" height=500px>
+</div>
+
+<div class="notes">
+PET can be used to look at differences in brain activation in different, but related tasks.
+</div>
+
+---
+
+<div class="centered">
+<img src="https://www.sciencedaily.com/images/2009/07/090714085812_1_900x600.jpg" height=500px>
+</div>
+
+<div class="notes">
+PET can be used to compare changes in brain metabolism at baseline, across tasks.
+</div>
+
 ## PET
 
 - Evaluating PET
@@ -286,6 +306,8 @@ Story about child who underwent ECoG surgery.
 <img src="http://onlinestorybank.com/wp-content/uploads/2014/03/Phineas-Gage.png" height="500px"/>
 </a>
 </div>
+
+<!-- Got to here 2017-08-28 -->
 
 ## ￼Stimulating the brain
 
