--- a/docs/lectures/260-2017-09-01-anatomy-I.Rmd
+++ b/docs/lectures/260-2017-09-01-anatomy-I.Rmd
@@ -113,13 +113,7 @@ Convolutional neural network.
 
 ## Brain anatomy through dance
 
-<div class="centered">
-*Right-click and select "loop"*</br>
-<audio controls>
-  <source src="https://raw.githubusercontent.com/psu-psychology/psy-511-scan-fdns-2017/master/lectures/snd/brain_boxing.m4a" type="audio/mpeg">
-  Your browser does not support the audio tag.
-</audio>
-</div>
+<!-- Open GarageBand "brain_boxing" -->
 
 ## Finding our way around
 
