--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -73,13 +73,16 @@ title: "Schedule"
 ### Wed, Sep 6
 
 - Neuroanatomy II
-- **Quiz 1**.
 - Assignments
     - Read [W&B](https://2e.mindsmachine.com/): 2:30-43.
     - Read [W&B](https://2e.mindsmachine.com/): 2:20-29.
+- Lecture notes
+    - Lecture notes. | [HTML slides](lectures/260-2017-09-01-anatomy-II.html) |
 
 ### Fri, Sep 8
 
+- **Quiz 1**.
+- Neuroanatomy III
 - Neuroanatomy Lab
 
 ---
@@ -88,8 +91,7 @@ title: "Schedule"
 
 ### Mon, Sep 11
 
-- Neuroanatomy III
-- Neuroanatomy Lab. 
+- Neuroanatomy Lab (continued) 
 
 ### Wed, Sep 13
 
