--- a/docs/lectures/260-2017-09-06-anatomy-II.Rmd
+++ b/docs/lectures/260-2017-09-06-anatomy-II.Rmd
@@ -600,6 +600,26 @@ Image of pre and post-central gyri from Wikipedia.
         + Dorsal root (sensory)
         + Ventral root (mostly motor)
     - Grey (interior) vs. white matter (exterior)
+    
+---
+
+<div class="centered">
+<img src="https://www.nap.edu/openbook/0309095859/xhtml/images/p2000d3bdg31001.jpg" height=500px>
+</div>
+
+<div class="notes">
+Spinal cord cross section diagram.
+</div>
+
+---
+
+<div class="centered">
+<img src="https://media1.britannica.com/eb-media/75/2975-004-7891D6AA.jpg" height=550px>
+</div>
+
+<div class="notes">
+Spinal cord cross section.
+</div>
 
 ## Organization of the PNS 
 
