--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -2,7 +2,7 @@
 title: "Schedule"
 ---
 
-*[W&B](https://2e.mindsmachine.com/) refers to the Watson & Breedlove text. Assignments are given in <chapter>:<pages> format, e.g., 1:2-19 means read Chapter 1, pages 2-19.*
+*[W&B](https://2e.mindsmachine.com/) refers to the Watson & Breedlove text. Assignments are given in chapter:pages format, e.g., 1:2-19 means read Chapter 1, pages 2-19.*
 
 ## Week 1, August 21 - 25
 
@@ -101,6 +101,8 @@ title: "Schedule"
 - Assignments
     - Read [W&B](https://2e.mindsmachine.com/): 2:20-29.
     - Read [W&B](https://2e.mindsmachine.com/) 3:50-55.
+- Lecture notes
+    - Lecture notes. | [HTML slides](lectures/260-2017-09-13-cells.html) |
 
 ### Fri, Sep 15
 
