Fix error in Quiz 1 question

--- a/docs/lectures/260-2017-09-13-cells.Rmd
+++ b/docs/lectures/260-2017-09-13-cells.Rmd
@@ -299,6 +299,8 @@ Microglia in red invading dentate gyrus.
 </a>
 </div>
 
+<!-- Start here next time -->
+
 ## Neural communication
 
 - Electrical
