--- a/quiz/psych-260-quiz-1.tex
+++ b/quiz/psych-260-quiz-1.tex
@@ -61,10 +61,10 @@
 
 \question Who believed that the \emph{heart} was the mental organ, and the brain was merely a cooling system for the body?
 \begin{choices}
-\choice Aristotle.
+\correctchoice Aristotle.
 \choice Galen.
 \choice Vesalius.
-\correctchoice Descartes.
+\choice Descartes.
 \end{choices}
 
 \newpage
