Fix ggplot figures

--- a/docs/lectures/260-2017-09-13-cells.Rmd
+++ b/docs/lectures/260-2017-09-13-cells.Rmd
@@ -13,6 +13,11 @@ output:
     latex_engine: xelatex
 ---
 
+```{r echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+```
+
+
 ## Visualizing the microanatomy of the brain (4:29)
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nvXuq9jRWKE" frameborder="0" allowfullscreen></iframe>
@@ -43,9 +48,9 @@ output:
 
 [[@azevedo2009equal]](http://doi.org/10.1002/cne.21974)
     
----
+## Neurons by brain mass
 
-```{r}
+```{r echo=FALSE}
 # data from Azevedo
 mass_g <- c(1232.93, 154.02, 117.66)
 portion <- c("cerebral ctx", "cerebellum", "rest")
@@ -53,7 +58,6 @@ b_neurons <- c(16.34, 69.03, 0.69)
 b_nonneurons <- c(60.84, 16.04, 7.73)
 brain <- data.frame(portion, mass_g, b_neurons, b_nonneurons)
 
-library(tidyverse)
 brain %>% ggplot() +
   aes(x=mass_g, b_neurons, color=portion) +
   geom_point() +
@@ -61,9 +65,9 @@ brain %>% ggplot() +
   ylab("Billions of cells")
 ```
 
----
+## Non-neuronal cells by brain mass
 
-```{r}
+```{r echo=FALSE}
 brain %>% ggplot() +
   aes(x=mass_g, b_nonneurons, color=portion) +
   geom_point() +
